feat : Actor preview port 1st completed / ShowMaker basic UI base work

--- a/ShowSystem.uplugin
+++ b/ShowSystem.uplugin
@@ -23,7 +23,7 @@
 		{
 			"name": "ShowSystemEditor",
 			"type": "Editor",
-			"loadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit"
 		}
 	],
 	"Plugins": [
@@ -34,6 +34,6 @@
 		{
 			"Name": "SlateEditorUtils",
 			"Enabled": true
-		},		
+		}		
 	]
 }
