feat : ShowMaker initial camera settings

--- a/Config/ShowSystemEditor.ini
+++ b/Config/ShowSystemEditor.ini
@@ -1,3 +1,3 @@
 [SShowMakerWidget]
-LastSelectedSkeletalMesh=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin.SK_Mannequin
+LastSelectedSkeletalMesh=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple.SKM_Quinn_Simple
 
