--- a/ShowSystem.uplugin
+++ b/ShowSystem.uplugin
@@ -10,7 +10,7 @@
 	"DocsURL": "",
 	"MarketplaceURL": "",
 	"SupportURL": "",
-	"CanContainContent": false,
+	"CanContainContent": true,
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
@@ -34,6 +34,6 @@
 		{
 			"Name": "SlateEditorUtils",
 			"Enabled": true
-		}		
+		}
 	]
 }
