--- a/Config/ShowSystemEditor.ini
+++ b/Config/ShowSystemEditor.ini
@@ -1,3 +1,4 @@
 [SShowMakerWidget]
-LastSelectedSkeletalMesh=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple.SKM_Quinn_Simple
+LastSelectedSkeletalMesh=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
+LastSelectedAnim=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny_C
 
