--- a/Config/ShowSystemEditor.ini
+++ b/Config/ShowSystemEditor.ini
@@ -1,4 +1,4 @@
 [SShowMakerWidget]
 LastSelectedSkeletalMesh=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
-LastSelectedAnim=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny_C
+LastSelectedAnim=/ShowSystem/ABP_ShowOrigin.ABP_ShowOrigin_C
 
