--- a/Config/ShowSystemEditor.ini
+++ b/Config/ShowSystemEditor.ini
@@ -1,4 +1,4 @@
 [SShowMakerWidget]
-LastSelectedSkeletalMesh=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
+LastSelectedSkeletalMesh=/Game/Characters/Mannequins/Meshes/SKM_Manny_Simple.SKM_Manny_Simple
 LastSelectedAnim=/ShowSystem/ABP_ShowOrigin.ABP_ShowOrigin_C
 
