--- a/ShowSystem.uplugin
+++ b/ShowSystem.uplugin
@@ -34,6 +34,14 @@
 		{
 			"Name": "SlateEditorUtils",
 			"Enabled": true
+		},
+		{
+			"Name": "TemplateSequence",
+			"Enabled": true
+		},
+		{
+			"Name": "GameplayCameras",
+			"Enabled": true
 		}
 	]
 }
